# midas-journal-784

./: 2D3DTwoProjRegistration.cxx  CMakeLists.txt  CMakeTemplate.txt  DicomSeriesReadNiftiImageWrite.cxx  ReadResampleWriteNifti.cxx  Test commands.bat  getDRRSiddonJacobsRayTracing.cxx  itkNormalizedCorrelationTwoImageToOneImageMetric.h  itkNormalizedCorrelationTwoImageToOneImageMetric.txx  itkSiddonJacobsRayCastInterpolateImageFunction.h  itkSiddonJacobsRayCastInterpolateImageFunction.txx  itkTwoImageToOneImageMetric.h  itkTwoImageToOneImageMetric.txx  itkTwoProjectionImageRegistrationMethod.h  itkTwoProjectionImageRegistrationMethod.txx
images/: BoxheadCT.hdr  BoxheadCTFull.hdr  BoxheadDRRFullDev1_G0-Author.tif  BoxheadDRRFullDev1_G0_Reg-Author.tif  BoxheadDRRFullDev1_G90-Author.tif  BoxheadDRRFullDev1_G90_Reg-Author.tif  boxheadDRRDev1_G0-Author.tif  boxheadDRRDev1_G0_Reg-Author.tif  boxheadDRRDev1_G90-Author.tif  boxheadDRRDev1_G90_Reg-Author.tif
